--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
+[submodule "third/lv_port_pc_vscode"]
+	path = third/lv_port_pc_vscode
+	url = git@github.com:lvgl/lv_port_pc_vscode.git
 [submodule "third/lvgl"]
 	path = third/lvgl
 	url = git@github.com:lvgl/lvgl.git
+[submodule "third/libpng"]
+	path = third/libpng
+	url = git@github.com:glennrp/libpng.git
